add test to reproduce ImageSingleton