@@ -56,7 +56,6 @@
       <version>1.1.3</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.graalvm.nativeimage</groupId>
       <artifactId>svm</artifactId>
@@ -87,7 +86,7 @@
         <dependency>
           <groupId>org.graalvm.buildtools</groupId>
           <artifactId>junit-platform-native</artifactId>
-          <version>0.9.9</version>
+          <version>0.9.11</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -125,6 +124,12 @@
               <buildArgs>
                 <buildArg>--no-fallback</buildArg>
                 <buildArg>--no-server</buildArg>
+                <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+                <arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+                <arg>--add-exports=jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
+                <arg>--add-exports=jdk.jfr/jdk.jfr.internal.jfc=ALL-UNNAMED</arg>
+                <arg>--add-exports=jdk.internal.vm/jdk.vm.ci.meta=ALL-UNNAMED</arg>
+                <arg>--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED</arg>
               </buildArgs>
             </configuration>
           </plugin>
